<resources>
    <string name="app_name">ffplay</string>

    <string name="strRecordStart">录制</string>
    <string name="strRecordStop">停录</string>

    <string name="strPlayStart">播放</string>
    <string name="strPlayStop">停播</string>

    <string name="strAudio">至录音界面</string>

    <string name="strPlayPcmAudio">播放PCM文件</string>
    <string name="strPlayYuv420p">播放yuv420p文件</string>

</resources>
