<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <dai.android.media.ffplay.XGLSurfaceView
        android:id="@+id/VideoGLSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="320dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayYUV420P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPlayYuv420p" />

        <Button
            android:id="@+id/btnPlayPcmAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPlayPcmAudio" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strAudio" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

    </ScrollView>


</LinearLayout>